--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.daemon=false
 
 # Minecraft
 minecraft_version=1.20.1
-minecraft_dependency=>=1.20
-minecraft_suffix=mc1.20
+minecraft_fabric_dependency=>=1.20
+minecraft_forge_dependency=>=1.20
 java_target=17
 java_dependency=>=17
 resource_pack_format=15
@@ -15,6 +15,9 @@ fabric_loader_version=0.14.22
 fabric_loader_dependency=>=0.14.0
 fabric_api_version=0.87.0+1.20.1
 fabric_api_dependency=*
+
+# Forge
+lowcodefml_dependency=[46,)
 
 # Mixin
 mixin_minimum_version=0.8
@@ -31,7 +34,7 @@ mod_page=https://legacy.curseforge.com/minecraft/mc-mods/formations-overworld
 mod_sources=https://github.com/SuperMartijn642/FormationsOverworld
 mod_issues=https://github.com/SuperMartijn642/FormationsOverworld/issues
 mod_package=com.supermartijn642.formations.overworld
-mod_main_class=FormationsOverworld
+mod_main_class=FormationsOverworldFabric
 maven_group=com.supermartijn642
 
 # CurseForge
@@ -49,7 +52,7 @@ modrinth_required_dependency_ids=fabric-api formations
 modrinth_optional_dependency_ids=
 
 # Dependencies
-formations_core_dependency=>=1.0.0
+formations_min_version=1.0.0
 core_library_file=4772763
 
 # Runtime mods
