--- a/gradle.properties
+++ b/gradle.properties
@@ -41,14 +41,14 @@ maven_group=com.supermartijn642
 curseforge_project_id=915324
 curseforge_release_type=release
 curseforge_game_versions=1.20 1.20.1 1.20.2
-curseforge_required_dependency_ids=fabric-api formations
+curseforge_required_dependency_ids=formations
 curseforge_optional_dependency_ids=
 
 # Modrinth
 modrinth_project_id=formations-overworld
 modrinth_release_type=release
 modrinth_game_versions=1.20 1.20.1 1.20.2
-modrinth_required_dependency_ids=fabric-api formations
+modrinth_required_dependency_ids=formations
 modrinth_optional_dependency_ids=
 
 # Dependencies
