--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -26,18 +26,6 @@ logoFile="${mod_id}.png" #optional
 authors="SuperMartijn642" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''${mod_description}'''
-# A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.${mod_id}]] #optional
-    # the modid of the dependency
-    modId="forge" #mandatory
-    # Does this dependency have to exist - if not, ordering below must be specified
-    mandatory=true #mandatory
-    # The version range of the dependency
-    versionRange="*" #mandatory
-    # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
-    ordering="NONE"
-    # Side this dependency is applied on - BOTH, CLIENT or SERVER
-    side="BOTH"
 # Here's another dependency
 [[dependencies.${mod_id}]]
     modId="minecraft"
@@ -47,7 +35,7 @@ description='''${mod_description}'''
     side="BOTH"
 # Here's another dependency
 [[dependencies.${mod_id}]]
-    modId="minecraft"
+    modId="formations"
     mandatory=true
     versionRange="[${formations_min_version},)"
     ordering="NONE"
