--- a/build.gradle
+++ b/build.gradle
@@ -167,7 +167,7 @@ modrinth {
     // Convert the changelog file to text
     changelog = file("changelog.md").text
     uploadFile = remapJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
-    loaders = ["fabric", "quilt"]
+    loaders = ["fabric", "forge", "neoforge", "quilt"]
     if (!project.modrinth_required_dependency_ids.isEmpty() || !project.modrinth_optional_dependency_ids.isEmpty()) {
         dependencies {
             // Required dependencies
