--- a/gradle.properties
+++ b/gradle.properties
@@ -40,14 +40,14 @@ maven_group=com.supermartijn642
 # CurseForge
 curseforge_project_id=915324
 curseforge_release_type=release
-curseforge_game_versions=1.20 1.20.1 1.20.2
+curseforge_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4
 curseforge_required_dependency_ids=formations
 curseforge_optional_dependency_ids=
 
 # Modrinth
 modrinth_project_id=formations-overworld
 modrinth_release_type=release
-modrinth_game_versions=1.20 1.20.1 1.20.2
+modrinth_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4
 modrinth_required_dependency_ids=formations
 modrinth_optional_dependency_ids=
 
