Update Gradle scripts and add support NeoForge for 1.20.5+

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,9 @@ java_dependency=>=17
 resource_pack_format=15
 
 # Fabric
-fabric_loader_version=0.14.22
+fabric_loader_version=0.15.11
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.87.0+1.20.1
+fabric_api_version=0.92.2+1.20.1
 fabric_api_dependency=*
 
 # Forge
@@ -37,23 +37,19 @@ mod_package=com.supermartijn642.formations.overworld
 mod_main_class=FormationsOverworld
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21
 curseforge_project_id=915324
-curseforge_release_type=release
-curseforge_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4
 curseforge_required_dependency_ids=formations
 curseforge_optional_dependency_ids=
-
-# Modrinth
-modrinth_project_id=formations-overworld
-modrinth_release_type=release
-modrinth_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4
+modrinth_project_id=KX1XC0Oo
 modrinth_required_dependency_ids=formations
 modrinth_optional_dependency_ids=
 
 # Dependencies
 formations_min_version=1.0.0
-core_library_file=4772763
+core_library_file=5102287
 
 # Runtime mods
 just_enough_items_file=4712867
