Add 1.21 specific branch

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,18 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.20.1
-minecraft_fabric_dependency=>=1.20
-minecraft_forge_dependency=>=1.20
+minecraft_version=1.21.1
+minecraft_fabric_dependency=>=1.21
+minecraft_forge_dependency=>=1.21
 java_target=17
 java_dependency=>=17
-resource_pack_format=15
+resource_pack_format=48
+version_suffix=mc1.21+
 
 # Fabric
 fabric_loader_version=0.15.11
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.92.2+1.20.1
+fabric_api_version=0.102.1+1.21.1
 fabric_api_dependency=*
 
 # Forge
@@ -39,7 +40,7 @@ maven_group=com.supermartijn642
 
 # Publishing
 publishing_release_type=stable
-publishing_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21
+publishing_game_versions=1.21 1.21.1
 curseforge_project_id=915324
 curseforge_required_dependency_ids=formations
 curseforge_optional_dependency_ids=
@@ -49,8 +50,8 @@ modrinth_optional_dependency_ids=
 
 # Dependencies
 formations_min_version=1.0.0
-core_library_file=5102287
+core_library_file=5627732
 
 # Runtime mods
-just_enough_items_file=4712867
-worldedit_file=4586218
+just_enough_items_file=5626724
+worldedit_file=5613180
