--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,12 @@ org.gradle.daemon=false
 
 # Minecraft
 minecraft_version=1.20.1
-minecraft_fabric_dependency=>=1.20
-minecraft_forge_dependency=>=1.20
+minecraft_fabric_dependency=>=1.20 <1.21
+minecraft_forge_dependency=>=1.20 <1.21
 java_target=17
 java_dependency=>=17
 resource_pack_format=15
+version_suffix=mc1.20
 
 # Fabric
 fabric_loader_version=0.15.11
@@ -39,7 +40,7 @@ maven_group=com.supermartijn642
 
 # Publishing
 publishing_release_type=stable
-publishing_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21
+publishing_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6
 curseforge_project_id=915324
 curseforge_required_dependency_ids=formations
 curseforge_optional_dependency_ids=
